# RL-Homework-3

./: README.md
PX4-Autopilot/ROMFS/px4fmu_common/init.d-posix/airframes/: 6012_gz_custom_quad  CMakeLists.txt
PX4-Autopilot/Tools/simulation/gz/models/custom_quad/: model.config  model.sdf
PX4-Autopilot/src/modules/uxrce_dds_client/: dds_topics.yaml
force_land/src/: force_land_node.cpp
offboard_rl/: CMakeLists.txt
offboard_rl/src/: trajectory.cpp
